--- a/api/package.json
+++ b/api/package.json
@@ -4,20 +4,31 @@
   "description": "backend for ts-parcel-fullstack",
   "main": "server.ts",
   "scripts": {
-    "dev": "tsc -w && nodemon dist/server.js",
+    "dev": "tsc && node ./dist/src/server.js",
     "start": "node dist/server.js",
+    "debug": "export DEBUG=* && npm run dev",
     "build": "tsc -p .",
-    "clean": "rimraf ./dist && rimraf -rf ./.cache"
+    "clean": "rimraf ./dist"
   },
   "author": "CMIV",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/debug": "^4.1.5",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^14.14.37",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "rimraf": "^2.7.1",
-    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "debug": "^4.3.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-winston": "^4.1.0",
+    "helmet": "^4.4.1",
+    "rimraf": "^3.0.2",
+    "winston": "^3.3.3"
   }
 }
