--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "clean": "rimraf ./dist"
   },
   "author": "CMIV",
-  "license": "MIT",
+  "license": "GPLv3",
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
